Fix Windows scrollbar bug

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,4 +1,6 @@
 body {
+	overflow-x: hidden;
+
 	@supports (display: grid) {
 		display: grid;
 	}
